fix signup error msg not showing

--- a/the_archives/src/styles/login.css
+++ b/the_archives/src/styles/login.css
@@ -1,3 +1,10 @@
+.signup-error {
+  color: #d32f2f;
+  margin-top: 16px;
+  font-size: 0.85em;
+  text-align: left;
+}
+
 .home-box {
   display: flex;
   position: fixed;
